# apertium-cym-eng

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS  AUTHORS  ChangeLog  Makefile.am  README  apertium-cy-en.cy-en.dix  apertium-cy-en.cy-en.dix.xml  apertium-cy-en.cy-en.rlx  apertium-cy-en.cy-en.t1x  apertium-cy-en.cy-en.t2x  apertium-cy-en.cy-en.t3x  apertium-cy-en.cy.dix  apertium-cy-en.cy.dix.xml  apertium-cy-en.cy.tsx  apertium-cy-en.en-cy.t1x  apertium-cy-en.en-cy.t2x  apertium-cy-en.en-cy.t3x  apertium-cy-en.en.dix  apertium-cy-en.en.dix.xml  apertium-cy-en.orth-cy.dix  apertium-cy-en.post-cy.dix  apertium-cy-en.post-en.dix  apertium-cy-en.pre-cy.t1x  apertium-cy-en.symbols.xml  apertium-cym-eng.cym-eng.dix  apertium-cym-eng.cym-eng.rtx  apertium-cym-eng.cym-eng.rtx-translit  apertium-cym-eng.cym-eng.t1x  apertium-cym-eng.cym-eng.t2x  apertium-cym-eng.cym-eng.t3x  apertium-cym-eng.cym.tsx  apertium-cym-eng.en-poly.dix  apertium-cym-eng.eng-cym.rtx  apertium-cym-eng.eng-cym.t3x  apertium-cym-eng.orth-cy.dix  apertium-cym-eng.post-cy.dix  configure.ac  cy-en.prob  (+2 more)
dev/: qtoutput.csv
dev/cg_paper/: my_cg.tex
dev/testvoc/: inconsistency-summary.sh  inconsistency.sh  testvoc-summary.cym-eng.txt  testvoc-summary.eng-cym.txt  testvoc.sh
test/: cym-eng-biltrans-expected.txt  cym-eng-chunker-expected.txt  cym-eng-disam-expected.txt  cym-eng-generator-expected.txt  cym-eng-input.txt  cym-eng-interchunk-expected.txt  cym-eng-morph-expected.txt  cym-eng-postchunk-expected.txt  cym-eng-pretransfer-expected.txt  cym-eng-tagger-expected.txt  eng-cym-chunker-expected.txt  eng-cym-input.txt  eng-cym-morph-expected.txt  eng-cym-postchunk-expected.txt  eng-cym-postgen-expected.txt  eng-cym-pretransfer-expected.txt  eng-cym-tagger-expected.txt  tests.json
utilities/: qtoutput.csv
